@@ -1,3 +1,12 @@
+Fri Mar 12 11:03:38 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/TypeNameEmitter.cpp:
+        * CIDLC/TypeNameEmitter.hpp:
+        
+          Added missing operations to generate enum type names. Thanks to
+          Jessica Pistole <Jessica.Pistole@jhuapl.edu> for reporting
+          the missing type names in generated servant glue code.
+
 Thu Mar 11 16:30:45 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
 
 	* CCF/CCF/IDL2/LexicalAnalyzer.cpp:
